Bug 154543 - UI: Paragraph style dialog "Reset to parent" (aka "Standard") does not work for Alignment > Snap to text grid
Summary: UI: Paragraph style dialog "Reset to parent" (aka "Standard") does not work f...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph Styles-Dialog
  Show dependency treegraph
 
Reported: 2023-04-01 15:52 UTC by Tyler
Modified: 2023-12-17 09:05 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler 2023-04-01 15:52:45 UTC
Here's another one in the spirit of bug129363 bug136339 bug146740 :

"Reset to parent" doesn't work for the attributes
- Alignment : Snap to text grid (if active)
- Outline & list: Include this paragraph in line numbering

Expectation:
"Reset to Parent" changes to controls to reflect parent's values,
clear the "overriden from parent" status of all attributes in the current tab,
thus removing them from the "Contains" list in the Organizer. There's no need
to click "Apply" after "Reset to parent".

Actual behavior:
"Reset to Parent" changes neither the controls, nor the "overridden" status.
Comment 1 Dieter 2023-04-15 15:59:37 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1e9f4de320f67d1218c710bcee1969a2324c6888
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded

Steps:
1. Open a new document
2. In sidebar select PS Heading 1 -> Edit Style
3. Deselect "Snap to text grid (if active)" in alignment tab and "Include this paragraph in line numbering" in outline and list tab
4. O.K.
5. Select PS again -> Edit Style -> organiser tab; Contains: "Paragraph does not snap to text grid" and "don't count lines" (expected)
6. Tab alignment -> Reset to parent
7. Tab Outline & Lists -> Reset to parent

Actual result:
"Paragraph does not snap to tet grid" and "Include this paragraoh in line numbering are still deselected
Contains entry in organizer tab: "Paragraph does not snap to text grid" and "don't count lines"

Expected result:
Options are selected (as in parent style) and entries in organizer tab has been removed

Same result in SafeMode

Tyler, could you please add information about the version you use?
Comment 2 Tyler 2023-04-15 21:29:26 UTC
Version: 7.4.6.2 / LibreOffice Community
Build ID: 5b1f5509c2decdade7fda905e3e1429a67acd63d
CPU threads: 16; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 3 Stéphane Guillou (stragu) 2023-11-07 08:40:49 UTC
(In reply to Tyler from comment #0)
> - Outline & list: Include this paragraph in line numbering
This one is already tracked in bug 115871, so let's focus on "Snap to text grid".

Reproduced in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 31fb3045dabdb27d913712f3abcade315e3ea9bd
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And 5.4.0.3.
Comment 4 Commit Notification 2023-11-17 13:13:31 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5af2041c551e97903d2ba7994c5e893836891832

tdf#154543 - Paragraph dialog: reset snap to grid to parent setting

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Dieter 2023-12-17 09:05:57 UTC
VERIFIED with

Version: 24.2.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 5f390384195b7264c6e52add9e90a39790285249
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Andreas, thank you for fixing it!